@@ -33,6 +33,7 @@ export("+.section",
        beamToXyzAdv,
        binmapAdp,
        binAverage,
+       binApply2D,
        binMean1D,
        binMean2D,
        binApply,
