@@ -1,5 +1,32 @@
 ## vim:textwidth=128:expandtab:shiftwidth=4:softtabstop=4
 
+binApply2D <- function(x, y, data, xbreaks, ybreaks, func)
+{
+    if (missing(x)) stop("must supply 'x'")
+    if (missing(y)) stop("must supply 'y'")
+    if (missing(data)) stop("must supply 'data'")
+    nx <- length(x)
+    if (nx != length(y)) stop("lengths of x and y must agree")
+    if (missing(xbreaks)) xbreaks <- pretty(x, 20)
+    if (missing(ybreaks)) ybreaks <- pretty(y, 20)
+    nxbreaks <- length(xbreaks)
+    if (nxbreaks < 2) stop("must have more than 1 xbreak")
+    nybreaks <- length(ybreaks)
+    if (nybreaks < 2) stop("must have more than 1 ybreak")
+    bi <- .bincode(x, xbreaks)
+    bj <- .bincode(y, ybreaks)
+    rval <- matrix(nrow=nxbreaks-1, ncol=nybreaks-1)
+    for (i in 1:nxbreaks-1) {
+        for (j in 1:nybreaks-1) {
+            rval[i, j] <- func(data[i==bi & j==bj])
+        }
+    }
+    list(xbreaks=xbreaks, xmids=xbreaks[-1]-0.5*diff(xbreaks), 
+         ybreaks=ybreaks, ymids=ybreaks[-1]-0.5*diff(ybreaks),
+         result=rval)
+}
+
+
 binMean1D <- function(x, f, xbreaks)
 {
     if (missing(x)) stop("must supply 'x'")
